--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:8080",
-
   "dependencies": {
+    "@react-keycloak/web": "^3.4.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "add": "^2.0.6",
     "axios": "^0.27.2",
     "bootstrap": "^4.6.2",
+    "keycloak-js": "^26.2.2",
     "moment": "^2.29.4",
     "primeflex": "^3.2.1",
     "primeicons": "^5.0.0",
